# blp

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg
notebook/: BQL Credit Spreads.ipynb  Bootstrap Yield Curve.ipynb
src/bbg/: __init__.py  api.py  handle.py
src/bbg/util/: __init__.py  bbg.py  delay.py  parse.py
src/blp/: __init__.py  client.py  handle.py  parse.py
test/: delay.py  example.py
tests/: example.py  test_example.py  test_subscribe.py
