[tool.poetry]
name = "blp"
version = "0.0.1"
description = "Simple blpapi wrapper"
authors = ["bissli <bissli@xyz.com>"]

[tool.poetry.dependencies]
python = "~3.11"

blpapi = { version = "^3.24.2", source = "blpapi" }

pandas = "*"
pyarrow = "*"
natsort = "*"
numpy = "*"

pywin32 = { version = "303", markers = "sys_platform == 'win32'" }
pyinstaller = { extras = ["encryption"], version = "^6.1.0" }

libb-util = { git = "https://github.com/bissli/libb-util" }
libb-date = { git = "https://github.com/bissli/libb-date" }

# == test
asserts = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "pdbpp",
  "pytest",
]

[[tool.poetry.source]]
name = "blpapi"
url = "https://bcms.bloomberg.com/pip/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
