[tool.poetry]
name = "blp"
version = "0.0.1"
description = "Simple blpapi wrapper"
authors = ["bissli <bissli@xyz.com>"]

[tool.poetry.dependencies]
python = "^3.9"

blpapi = { version = "^3.24.2", source = "blpapi" }

pandas = "*"
pyarrow = "*"
numpy = "*"
opendate = "*"

pywin32 = { version = "303", markers = "sys_platform == 'win32'" }
pyinstaller = { extras = ["encryption"], version = "^6.1.0" }

libb-util = { git = "https://github.com/bissli/libb-util" }

# == test
asserts = { version = "*", optional = true }
pytest = { version = "*", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "pytest",
]

[[tool.poetry.source]]
name = "blpapi"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
