[tool.poetry]
name = "blp"
version = "0.0.1"
description = "Simple blpapi wrapper"
authors = ["bissli <bissli@xyz.com>"]

[tool.poetry.dependencies]
python = "^3.9"

blpapi = { version = "*", source = "blpapi" }

pandas = "*"
pyarrow = "*"
numpy = "*"
opendate = "*"

pywin32 = { version = "*", markers = "sys_platform == 'win32'" }

libb-util = { git = "https://github.com/bissli/libb-util" }

# == test
asserts = { version = "*", optional = true }
pytest = { version = "*", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "pytest",
]

[[tool.poetry.source]]
name = "blpapi"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
